Fixed issue: font size change on mobile rotation

--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ h3 {
 }
 
 p {
+	-ms-text-size-adjust: 100%;
+	text-size-adjust: 100%;
 	text-align: left;
 	font-size: 16px;
 	margin: var(--padding) 0px 0px var(--padding);
